--- a/SpringBoot/springboot-03-web/src/main/resources/templates/test2.html
+++ b/SpringBoot/springboot-03-web/src/main/resources/templates/test2.html
@@ -16,7 +16,7 @@
 <h4 th:each="user :${users}" th:text="${user}"></h4>
 
 <h4>
-    <!--行内写法：官网#12-->
+    <!--行内写法：官网-->
     <span th:each="user:${users}">[[${user}]]</span>
 </h4>
 
