--- a/SpringBoot/springboot-04-project/src/main/resources/templates/404.html
+++ b/SpringBoot/springboot-04-project/src/main/resources/templates/404.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- saved from url=(0052)http://getbootstrap.com/docs/4.0/examples/dashboard/ -->
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -9,10 +9,10 @@
 
 		<title>Dashboard Template for Bootstrap</title>
 		<!-- Bootstrap core CSS -->
-		<link href="../static/css/bootstrap.min.css" rel="stylesheet">
+		<link th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
 
 		<!-- Custom styles for this template -->
-		<link href="../static/css/dashboard.css" rel="stylesheet">
+		<link th:href="@{/css/dashboard.css}" rel="stylesheet">
 		<style type="text/css">
 			/* Chart.js */
 			
@@ -186,18 +186,18 @@
 		<!-- Bootstrap core JavaScript
     ================================================== -->
 		<!-- Placed at the end of the document so the pages load faster -->
-		<script type="text/javascript" src="../static/js/jquery-3.2.1.slim.min.js" ></script>
-		<script type="text/javascript" src="../static/js/popper.min.js" ></script>
-		<script type="text/javascript" src="../static/js/bootstrap.min.js" ></script>
+		<script type="text/javascript" th:src="@{/js/jquery-3.2.1.slim.min.js}" ></script>
+		<script type="text/javascript" th:src="@{/js/popper.min.js}" ></script>
+		<script type="text/javascript" th:src="@{/js/bootstrap.min.js}" ></script>
 
 		<!-- Icons -->
-		<script type="text/javascript" src="../static/js/feather.min.js" ></script>
+		<script type="text/javascript" th:src="@{/js/feather.min.js}" ></script>
 		<script>
 			feather.replace()
 		</script>
 
 		<!-- Graphs -->
-		<script type="text/javascript" src="../static/js/Chart.min.js" ></script>
+		<script type="text/javascript" th:src="@{/js/Chart.min.js}" ></script>
 		<script>
 			var ctx = document.getElementById("myChart");
 			var myChart = new Chart(ctx, {
