--- a/SpringBoot/springboot-08-shrio/shiro-springboot/src/main/resources/templates/index.html
+++ b/SpringBoot/springboot-08-shrio/shiro-springboot/src/main/resources/templates/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:shiro="http://www.thymeleaf.org/thymeleaf-extras-shiro">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -8,6 +9,18 @@
 
 <h1>首页</h1>
 <p th:text="${msg}"></p>
-<a th:href="@{/user/add}">add</a> | <a th:href="@{/user/update}">update</a>
+
+<div th:if="${session.loginUser==null}">
+    <a th:href="@{/toLogin}">登录</a>
+</div>
+
+<div shiro:hasPermission="user:add">
+    <a th:href="@{/user/add}">add</a>
+</div>
+
+<div shiro:hasPermission="user:update">
+    <a th:href="@{/user/update}">update</a>
+</div>
+
 </body>
 </html>
